updated structure of sass folder tree and fixed navbar spacing

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -31,7 +31,8 @@ body {
 .navbar {
   height: 20%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 2.5rem;
   align-items: center;
 }
 .navbar .navbar-links ul li {
@@ -88,33 +89,36 @@ body {
 }
 
 .main-section {
+  background-color: grey;
   padding: 2.5rem;
   height: 80%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1em;
 }
-.main-section .left-grid {
+
+.left-grid {
+  background-color: lightblue;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: end;
 }
-.main-section .left-grid .left-grid-paragraph {
+.left-grid .left-grid-paragraph {
   width: 40%;
 }
-.main-section .left-grid .left-grid-paragraph p {
+.left-grid .left-grid-paragraph p {
   text-align: right;
 }
-.main-section .left-grid .left-grid-image {
+.left-grid .left-grid-image {
   position: relative;
   width: 100%;
 }
-.main-section .left-grid .left-grid-image img {
+.left-grid .left-grid-image img {
   width: 100%;
   max-height: 90%;
 }
-.main-section .left-grid .left-grid-image::after {
+.left-grid .left-grid-image::after {
   content: "CIO RESIDENTIAL \a AREA PROJECT";
   white-space: pre;
   position: absolute;
@@ -124,62 +128,66 @@ body {
   font-weight: bold;
   font-size: 1.3rem;
 }
-.main-section .middle-grid {
+
+.middle-grid {
+  background-color: lightcoral;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
-.main-section .middle-grid .middle-grid-image {
+.middle-grid .middle-grid-image {
   height: 80%;
 }
-.main-section .middle-grid .middle-grid-image img {
+.middle-grid .middle-grid-image img {
   width: 100%;
 }
-.main-section .middle-grid .middle-grid-header {
+.middle-grid .middle-grid-header {
   height: 20%;
   width: 70%;
 }
-.main-section .middle-grid .middle-grid-header h2 {
+.middle-grid .middle-grid-header h2 {
   text-transform: uppercase;
 }
-.main-section .right-grid {
+
+.right-grid {
+  background-color: lightgreen;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
-.main-section .right-grid .right-grid-slogan {
+.right-grid .right-grid-slogan {
   height: 80%;
   width: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.main-section .right-grid .right-grid-slogan .right-grid-slogan-logo img {
+.right-grid .right-grid-slogan .right-grid-slogan-logo img {
   width: 60px;
 }
-.main-section .right-grid .right-grid-slogan .right-grid-slogan-text h3 {
+.right-grid .right-grid-slogan .right-grid-slogan-text h3 {
   text-transform: uppercase;
   font-size: 0.7rem;
 }
-.main-section .right-grid .right-grid-button {
+.right-grid .right-grid-button {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 20%;
 }
-.main-section .right-grid .right-grid-button button {
+.right-grid .right-grid-button button {
   width: 80px;
   height: 80px;
   border-radius: 50%;
   background-color: #EB5D3F;
   border: 0px;
 }
-.main-section .right-grid .right-grid-button button a {
+.right-grid .right-grid-button button a {
   text-decoration: none;
   color: #fff;
 }
