--- a/styles/sass/layout/_navbar.scss
+++ b/styles/sass/layout/_navbar.scss
@@ -2,7 +2,8 @@
 .navbar {
     height: 20%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 2.5rem;
     align-items: center;
     // LINKS
     .navbar-links {
